--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "autoprefixer": "10.4.19",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
-    "next": "^13.x.x",
+    "next": "^15.0.2",
     "next-auth": "^4.x.x",
     "postcss": "8.4.38",
     "react": "^18.3.0",
